--- a/css/style-about.css
+++ b/css/style-about.css
@@ -4,11 +4,11 @@
 }
 
 .info {
-text-align: center;
+    text-align: center;
 }
 
 .info p {
-    padding-bottom: 15px;
+    padding-bottom: 20px;
 }
 
 .info span {
@@ -16,6 +16,9 @@ text-align: center;
     font-weight: 600;
 }
 
+.info p:first-child {
+    font-size: 25px;
+}
 
 .workers {
     display: flex;
@@ -38,8 +41,23 @@ text-align: center;
     border: 1px rgba(0, 4, 163, 0.5) groove;
 }
 
-.workers figure:first-child img {
+.workers img:hover {
+    background-image: url("../assets/images/about/masters_back.jpg");
+    background-size: cover;
+}
+
+
+.workers-first-row figure:first-child img {
     background: rgba(70, 95, 250, 0.6);
+}
+
+.workers-first-row figure:first-child img:hover {
+    background-image: url("../assets/images/about/director_back.jpg");
+    background-size: cover;
+}
+
+.workers figure:hover {
+    font-weight: 600;
 }
 
 .workers figcaption p {
@@ -60,6 +78,12 @@ text-align: center;
     flex-wrap: wrap;
 }
 
+.schedule h2 {
+    font-size: 30px;
+    color: #c92839;
+    padding-bottom: 15px;
+}
+
 .schedule img {
     width: 150px;
 }
@@ -69,21 +93,76 @@ text-align: center;
     margin-left: 20px;
     font-weight: 600;
     text-align: center;
-
 }
 
 .schedule div p {
     padding-bottom: 10px;
-
-}
-
-.schedule div p:first-child{
-color: #bb0c09;
-    font-size: 23px;
-
 }
 
 .schedule div span {
     vertical-align: super;
     font-size: 14px;
+}
+
+.feedback {
+    margin: 50px 40px 0 40px;
+}
+
+.feedback h2 {
+    font-family: Pattaya-Regular, serif;
+    font-size: 30px;
+    color: #3c4a5a;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.feedback blockquote {
+    background: rgba(145, 143, 250, 0.5);
+    color: #131314;
+    padding: 30px 30px 30px 90px;
+    position: relative;
+    margin-bottom: 15px;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.feedback blockquote:nth-child(odd) {
+    background: rgba(145, 143, 250, 0.3);
+}
+
+
+.feedback blockquote:before {
+    content: "\201C";
+    font-family: serif;
+    position: absolute;
+    top: 20px;
+    left: 16px;
+    color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: white;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 50px;
+}
+.feedback blockquote:after {
+    content: "";
+    width: 4px;
+    background: white;
+    position:absolute;
+    left: 70px;
+    top: 20px;
+    bottom: 20px;
+}
+
+.feedback blockquote footer {
+    padding-top: 5px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.feedback blockquote cite {
+    text-transform: uppercase;
 }
