--- a/css/style.css
+++ b/css/style.css
@@ -222,73 +222,10 @@
 
 .main {
     font-size: 20px;
-    background: url(../assets/images/background/ep_naturalwhite.png) repeat 100% 0;
+    background: url(../assets/images/background/circles-and-roundabouts.png.png) repeat 100% 0;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-}
-
-.greetings {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px 0 40px 20px;
-    justify-content: center;
-}
-
-/*.greetings::after {*/
-/*content: "";*/
-/*border: 1px inset;*/
-/*position: absolute;*/
-/*width: 100%;*/
-/*margin-top: 70px;*/
-/*}*/
-
-.minsk-pic {
-    width: 66px;
-    box-shadow: 0 0 5px 2px rgb(16, 13, 43);
-    border-radius: 3px;
-    margin-right: 2%;
-    opacity: .8;
-}
-
-.minsk-pic:hover {
-    opacity: .4;
-}
-
-.greetings figcaption {
-    font-family: Pattaya-Regular, serif;
-    font-size: 30px;
-    color: #3c4a5a;
-    align-self: center;
-}
-
-.offer {
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 20px;
-    justify-content: space-evenly;
-}
-
-.fast-pic {
-    background: url(../assets/images/main/fast.png) no-repeat 100% 0;
-    width: 140px;
-    height: 140px;
-    background-size: contain;
-}
-
-.quality-pic {
-    background: url(../assets/images/main/quality.png) no-repeat 100% 0;
-    width: 170px;
-    height: 170px;
-    background-size: contain;
-    margin-top: -2%;
-}
-
-.price-pic {
-    background: url(../assets/images/main/prices.png) no-repeat 100% 0;
-    width: 140px;
-    height: 140px;
-    background-size: contain;
 }
 
 .help {
@@ -309,19 +246,53 @@
     align-self: center;
 }
 
+.offer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 30px;
+    margin-top: -2%;
+}
+
+.fast-pic {
+    background: url(../assets/images/main/fast.png) no-repeat 100% 0;
+    width: 160px;
+    height: 160px;
+    background-size: contain;
+}
+
+.quality-pic {
+    background: url(../assets/images/main/quality.png) no-repeat 100% 0;
+    width: 190px;
+    height: 190px;
+    background-size: contain;
+    margin-top: -2%;
+}
+
+.price-pic {
+    background: url(../assets/images/main/prices.png) no-repeat 100% 0;
+    width: 160px;
+    height: 160px;
+    background-size: contain;
+}
+
 .services {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    padding-bottom: 5%;
-    margin-top: -4%;
+    padding-bottom: 3%;
+    margin-top: -3%;
 }
 
 .services div {
     display: inline-flex;
-    padding-top: 5%;
+    margin-top: 2%;
     width: 450px;
-    padding-left: 3%;
+    margin-left: 3%;
+    padding: 10px;
+    border: 1px dotted rgba(0, 0, 0, 0.50);
+    border-radius: 10px;
+    background: rgba(122, 135, 163, 0.27);
 }
 
 .services div:first-child,
@@ -373,4 +344,5 @@
     text-transform: uppercase;
     font-size: 30px;
 }
+
 
