feat: add data showing from database MySQL (mess temp code)

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@
 
 .main {
     font-size: 20px;
-    background: url(../assets/images/background/circles-and-roundabouts.png.png) repeat 100% 0;
+    background: url(../assets/images/background/confectionary.png) repeat 100% 0;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
