--- a/css/style-services.css
+++ b/css/style-services.css
@@ -1,22 +1,56 @@
 .main-services {
-    background: url(../assets/images/background/country-quilt.png) repeat 100% 0;
+    background: url(../assets/images/background/services.jpg) repeat 100% 0;
     padding: 40px;
 }
 
-.test {
-height: 600px;
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
+.title {
+    padding-bottom: 20px;
     text-align: center;
+    font-size: 40px;
+    font-family: Pattaya-Regular, serif;
+    color: #070036;
+    text-shadow: 0 0 #dad3f9, 0 3px #dad3f9, 3px 0 #dad3f9, 0 -1px #8b9177;
 }
 
-.test a {
-    padding-top: 50px;
+.table  {
+    margin: auto;
+    border-radius: 15px;
+    box-shadow: 0 0 5px 6px rgba(139, 145, 119, 0.7);
+    background-color: rgba(203, 202, 229, 0.6);
+    }
+
+
+tr th {
+    font-size: 25px;
     font-weight: bold;
-    color: #1c168e;
+    text-align: center;
+    padding: 20px;
 }
 
-.test a:nth-child(odd) {
-    color: #548e55;
+tr td {
+    padding: 5px 30px;
+    border-bottom: 1px  #2b3541 dotted;
+}
+
+tr td:last-child {
+    text-align: center;
+
+}
+
+.last-line td {
+    border-bottom: none;
+}
+
+tr .td-title {
+    padding: 20px 0 10px 0;
+    font-weight: bold;
+    border: none;
+}
+
+.table tr th {
+    border-bottom: 2px rgba(18, 0, 119, 0.4) outset;
+}
+
+.table tr:last-child td {
+    padding-bottom: 25px;
 }
