--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,20 @@
     margin-top: 10px;
 }
 
+.nav-item-login {
+    padding-top: 50%;
+    font-size: 16px;
+
+
+}
+
+.nav-item-login a {
+    color: #0a071f;
+    margin-left: -10%;
+
+}
+
+
 .footer {
     border-top: 1px solid rgba(0, 0, 0, 0.50);
     border-bottom: 1px solid rgba(0, 0, 0, 0.50);
@@ -222,7 +236,8 @@
 
 .main {
     font-size: 20px;
-    background: url(../assets/images/background/confectionary.png) repeat 100% 0;
+    background: url(../assets/images/background/pc.jpg) repeat 100% 0;
+    background-size: cover;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -347,5 +362,3 @@
     text-transform: uppercase;
     font-size: 30px;
 }
-
-
