style: minor changes

--- a/views/clients.hbs
+++ b/views/clients.hbs
@@ -4,10 +4,10 @@
     <title>Список клиентов</title>
     <meta charset="utf-8" />
 </head>
-<body>
-<h1>Список клиентов</h1>
-<p><a href="/create">Добавить клиента</a></p>
-<table>
+<body style="background-color: #d9f9d3">
+<h1 style="color: #1b2577; font-size: 40px; font-family: 'Monotype Corsiva',serif; text-align: center">Список клиентов</h1>
+<p><a href="/create" style="color: #771e1f; font-size: 30px">Добавить клиента</a></p>
+<table  style="margin: auto">
     <tr><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>Вип-статус</th></tr>
     {{#each clients}}
         <tr>
