--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -4,10 +4,10 @@
     <title>Список мастеров</title>
     <meta charset="utf-8" />
 </head>
-<body>
-<h1>Список мастеров</h1>
-<p><a href="/create">Добавить мастера</a></p>
-<table>
+<body style="background-color: #f9dadf">
+<h1 style="color: #1b2577; font-size: 40px; font-family: 'Monotype Corsiva',serif; text-align: center">Список мастеров</h1>
+<p><a href="/create" style="color: #771e1f; font-size: 30px">Добавить мастера</a></p>
+<table  style="margin: auto">
     <tr><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>Код_специализации</th></tr>
     {{#each masters}}
         <tr>
