--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -4,10 +4,10 @@
     <title>Список заказов</title>
     <meta charset="utf-8" />
 </head>
-<body>
-<h1>Список заказов</h1>
-<p><a href="/create">Добавить заказ</a></p>
-<table>
+<body style="background-color: #dad3f9">
+<h1 style="color: #1b2577; font-size: 40px; font-family: 'Monotype Corsiva',serif; text-align: center">Список заказов</h1>
+<p><a href="/create" style="color: #771e1f; font-size: 30px">Добавить заказ</a></p>
+<table  style="margin: auto">
     <tr><th>Дата заказа</th><th>Техника</th><th>дата выполнения</th><th>Оплачено</th>
         <th>Выдано</th><th>К оплате</th><th>Комметарии</th><th>Код клиента</th>
         <th>Код мастера</th><th>Код услуги</th></tr>
