--- a/views/services.hbs
+++ b/views/services.hbs
@@ -3,9 +3,14 @@
 <head>
     <title>Список Услуг</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet"  type = "text/css" href="css/style.css">
+    <link rel="stylesheet" type = "text/css" href="css/reset.css">
+    <link rel="stylesheet" type = "text/css" href="css/fonts.css">
+    <link rel="icon" type = "text/css" href="favicon.png">
+
 </head>
-<body style="background-color: #f9f7d0">
-<h1 style="color: #1b2577; font-size: 40px; font-family: 'Monotype Corsiva',serif; text-align: center">Список Услуг</h1>
+<body>
+<h1>Список Услуг</h1>
 <p><a href="/create" style="color: #771e1f; font-size: 30px">Добавить услугу</a></p>
 <table style="margin: auto">
     <tr><th>Наименование услуги</th><th>Цена(бел.р.)</th><th>Гарантия(мес.)</th></tr>
