--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Список Услуг</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet"  type = "text/css" href="css/style_hbs.css">
-    <link rel="stylesheet" type = "text/css" href="css/reset.css">
-    <link rel="stylesheet" type = "text/css" href="css/fonts.css">
+    <title>БД "Компьютерный доктор"</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/style_hbs.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
 
 </head>
 <body>
 
-<main class="main">
-
-    <a href="/services">Услуги</a>
-    <a href="/clients">Клиенты</a>
-    <a href="/masters">Мастера</a>
-    <a href="/orders">Заказы</a>
-
+<main class="main-start">
+    <div>
+        <p><a class='button' href="/masters">Мастера</a></p>
+        <p><a class='button' href="/clients">Клиенты</a></p>
+    </div>
+    <div>
+        <p><a class='button' href="/services">Услуги</a></p>
+    <p><a class='button' href="/orders">Заказы</a></p>
+    </div>
 </main>
 
 </body>
