--- a/views/masters.hbs
+++ b/views/masters.hbs
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Список мастеров</title>
+    <title>Мастера</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet"  type = "text/css" href="css/style_hbs.css">
+    <link rel="stylesheet" type = "text/css" href="css/reset.css">
+    <link rel="stylesheet" type = "text/css" href="css/fonts.css">
 </head>
-<body style="background-color: #f9dadf">
-<h1 style="color: #1b2577; font-size: 40px; font-family: 'Monotype Corsiva',serif; text-align: center">Список мастеров</h1>
-<p><a href="/create" style="color: #771e1f; font-size: 30px">Добавить мастера</a></p>
-<table  style="margin: auto">
-    <tr><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>Код_специализации</th></tr>
+<body>
+<main class="main-all">
+<h1>Мастера мастерской "Компьютерный доктор"</h1>
+    <p class="add"><a href="/create" class='button-add'>Добавить мастера</a></p>
+<table class="table-all">
+    <tr><th>Номер</th><th>ФИО</th><th>Адрес</th><th>Телефон</th><th>э-мейл</th><th>код специализации</th></tr>
     {{#each masters}}
         <tr>
-            <td>{{this.name_client}}</td>
+            <td>{{this.id_master}}</td>
+            <td>{{this.name_master}}</td>
             <td>{{this.adress}}</td>
             <td>{{this.phone}}</td>
             <td>{{this.e-mail}}</td>
             <td>{{this.id_specialization}}</td>
             <td>
-                <a href="/edit/{{this.id_master}}">Изменить</a>|
-                <form action="delete/{{this.id_master}}" method="POST" style="display:inline;">
-                    <input type="submit" value="Удалить" />
+                <a class='button-change' href="/edit/{{this.id_master}}">изменить</a>
+                <form action="delete/{{this.id_master}}" method="POST">
+                    <input class="delete-all" type="submit" value="удалить" />
                 </form>
             </td>
         </tr>
     {{/each}}
 </table>
+</main>
 </body>
-<html>
+</html>
